fix sizing on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -51,12 +51,14 @@ a.btn {
 
 .content-wrapper {
   max-width: 1440px;
-  margin: 8em auto;
-  width: calc(100% - 80px);
+  margin: 2em auto;
+  width: calc(100% - 48px);
   @media(min-width: 1000px) {
     display: grid;
     gap: 40px;
     grid-template-columns: calc((100% - 40px) * 0.3) calc((100% - 40px) * 0.7);
+      margin: 8em auto;
+    width: calc(100% - 80px);
   }
   .star-rating {
     span {
